--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
     <title>About FounderCalculators | Free Startup & SaaS Financial Calculators</title>
     <meta name="description" content="Learn about the mission behind FounderCalculators and how we provide free, expert-backed financial and growth tools for the startup ecosystem.">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Unified Link Hover Style */
+        .standard-link { transition: color 0.2s; }
+        .standard-link:hover { color: #2563eb; text-decoration: underline; }
+    </style>
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
@@ -15,12 +20,12 @@
                 Founder<span class="text-blue-600">Calculators</span>
             </a>
             <div class="hidden md:flex items-center space-x-6 text-sm font-medium text-slate-600">
-                <a href="index.html#finance" class="hover:text-blue-600 transition">Finance</a>
-                <a href="index.html#growth" class="hover:text-blue-600 transition">Growth</a>
-                <a href="index.html#ops" class="hover:text-blue-600 transition">Operations</a>
+                <a href="index.html#finance" class="standard-link">Finance</a>
+                <a href="index.html#growth" class="standard-link">Growth</a>
+                <a href="index.html#ops" class="standard-link">Operations</a>
                 <div class="h-4 w-px bg-slate-200 mx-2"></div>
-                <a href="about.html" class="text-blue-600">About</a>
-                <a href="contact.html" class="hover:text-blue-600 transition">Contact</a>
+                <a href="about.html" class="text-blue-600 font-bold">About</a>
+                <a href="contact.html" class="standard-link">Contact</a>
             </div>
         </div>
     </nav>
@@ -39,19 +44,19 @@
             <div>
                 <h2 class="text-2xl font-bold text-slate-900 mb-4">Our Mission</h2>
                 <p class="text-lg text-slate-700">
-                    The startup world is filled with complex jargon and "black box" metrics. Our mission is to democratize financial literacy for entrepreneurs. We provide free, transparent, and easy-to-use tools that help founders model their runway, value their companies, and understand their unit economics with professional clarity.
+                    The startup world is filled with complex jargon and "black box" metrics. Our mission is to democratize financial literacy for entrepreneurs. We provide free, transparent, and easy-to-use <strong>SaaS and startup financial tools</strong> that help founders model their runway, value their companies, and understand their unit economics with professional clarity.
                 </p>
             </div>
 
             <div class="bg-white border border-slate-200 p-8 rounded-2xl shadow-sm">
                 <h2 class="text-2xl font-bold text-slate-900 mb-4">Why Trust Our Tools?</h2>
                 <p class="text-slate-700 mb-4">
-                    Every calculator on this site is benchmarked against modern industry standards and startup finance best practices. We don't just provide the formula; we provide the context. 
+                    Every calculator on this site is benchmarked against modern industry standards and <strong>SaaS founder</strong> best practices. We don't just provide the formula; we provide the context. 
                 </p>
                 <ul class="space-y-3 text-slate-700">
                     <li class="flex items-start">
                         <span class="text-blue-600 mr-2 font-bold">✔</span>
-                        <span><strong>Expert-Backed:</strong> Developed by operators with experience in both bootstrapped and VC-backed environments.</span>
+                        <span><strong>Expert-Backed:</strong> Developed by operators with experience in both bootstrapped and venture-backed environments.</span>
                     </li>
                     <li class="flex items-start">
                         <span class="text-blue-600 mr-2 font-bold">✔</span>
@@ -67,7 +72,7 @@
             <div>
                 <h2 class="text-2xl font-bold text-slate-900 mb-4">Our Methodology</h2>
                 <p class="text-lg text-slate-700">
-                    We believe in transparency. Unlike many black-box platforms, we explain the <em>how</em> and <em>why</em> behind every calculation. Whether it's the <a href="rule-of-40.html" class="text-blue-600 hover:underline">Rule of 40</a> for SaaS efficiency or the <a href="berkus-valuation.html" class="text-blue-600 hover:underline">Berkus Method</a> for pre-revenue valuation, we use widely accepted frameworks utilized by venture capitalists and angel investors globally.
+                    We believe in transparency. Unlike many black-box platforms, we explain the <em>how</em> and <em>why</em> behind every calculation. Whether it's the <a href="rule-of-40.html" class="text-blue-600 font-bold hover:underline">Rule of 40</a> for SaaS efficiency or the <a href="berkus-valuation.html" class="text-blue-600 font-bold hover:underline">Berkus Method</a> for pre-revenue valuation, we use widely accepted frameworks utilized by venture capitalists and angel investors globally.
                 </p>
             </div>
 
@@ -79,10 +84,10 @@
             </div>
         </section>
 
-        <div class="mt-16 bg-blue-600 rounded-2xl p-8 text-center text-white">
-            <h3 class="text-2xl font-bold mb-4">Ready to model your growth?</h3>
+        <div class="mt-16 bg-blue-600 rounded-2xl p-8 text-center text-white shadow-lg">
+            <h3 class="text-2xl font-bold mb-4 text-white">Ready to model your growth?</h3>
             <p class="text-blue-100 mb-6">Explore our full suite of free calculators.</p>
-            <a href="index.html" class="inline-block bg-white text-blue-600 px-8 py-3 rounded-lg font-bold hover:bg-blue-50 transition">View All Tools</a>
+            <a href="index.html" class="inline-block bg-white text-blue-600 px-8 py-3 rounded-lg font-bold hover:bg-slate-100 transition shadow-sm">View All Tools</a>
         </div>
     </main>
 
@@ -96,15 +101,16 @@
                 <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Resources</p>
                 <ul class="text-sm space-y-2">
                     <li><a href="about.html" class="text-blue-600 font-bold">About Us</a></li>
-                    <li><a href="contact.html" class="hover:text-blue-600 transition">Contact Support</a></li>
-                    </ul>
+                    <li><a href="contact.html" class="standard-link">Contact Support</a></li>
+                    <li><a href="index.html#finance" class="standard-link">Financial Tools</a></li>
+                </ul>
             </div>
             <div>
                 <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Legal</p>
                 <ul class="text-sm space-y-2">
-                    <li><a href="privacy.html" class="hover:text-blue-600 transition">Privacy Policy</a></li>
-                    <li><a href="terms.html" class="hover:text-blue-600 transition">Terms of Service</a></li>
-                    <li><a href="disclaimer.html" class="hover:text-blue-600 transition">Earnings Disclaimer</a></li>
+                    <li><a href="privacy.html" class="standard-link">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="standard-link">Terms of Service</a></li>
+                    <li><a href="disclaimer.html" class="standard-link">Earnings Disclaimer</a></li>
                 </ul>
             </div>
         </div>
