--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us | FounderCalculators – Startup Support & Feedback</title>
+    <meta name="description" content="Have questions about our startup calculators or SaaS financial tools? Reach out to FounderCalculators for support, tool suggestions, or partnership inquiries.">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .standard-link { transition: color 0.2s; }
+        .standard-link:hover { color: #2563eb; text-decoration: underline; }
+    </style>
+</head>
+<body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
 
+    <nav class="bg-white border-b py-4 px-6 sticky top-0 z-50">
+        <div class="max-w-6xl mx-auto flex justify-between items-center">
+            <a href="index.html" class="font-bold text-xl tracking-tight text-slate-900">
+                Founder<span class="text-blue-600">Calculators</span>
+            </a>
+            <div class="hidden md:flex items-center space-x-6 text-sm font-medium text-slate-600">
+                <a href="index.html#finance" class="standard-link">Finance</a>
+                <a href="index.html#growth" class="standard-link">Growth</a>
+                <a href="index.html#ops" class="standard-link">Operations</a>
+                <div class="h-4 w-px bg-slate-200 mx-2"></div>
+                <a href="about.html" class="standard-link">About</a>
+                <a href="contact.html" class="text-blue-600 font-bold">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="max-w-4xl mx-auto px-6 py-16">
+        <header class="text-center mb-12">
+            <h1 class="text-4xl font-extrabold text-slate-900 mb-4 tracking-tight">Contact Support</h1>
+            <p class="text-xl text-slate-600 max-w-2xl mx-auto">
+                Have a question about a specific <strong>SaaS financial tool</strong> or a suggestion for a new <strong>startup calculator</strong>? We are here to help.
+            </p>
+        </header>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+            <section class="bg-white p-8 rounded-2xl shadow-sm border border-slate-200">
+                <form action="#" method="POST" role="form" aria-label="Contact support form" class="space-y-4">
+                    <div>
+                        <label for="name" class="block text-sm font-semibold text-slate-700 mb-1">Full Name</label>
+                        <input type="text" id="name" name="name" aria-required="true" class="w-full p-3 rounded-lg border border-slate-300 focus:ring-2 focus:ring-blue-500 outline-none transition" placeholder="Your Name" required>
+                    </div>
+                    <div>
+                        <label for="email" class="block text-sm font-semibold text-slate-700 mb-1">Email Address</label>
+                        <input type="email" id="email" name="email" aria-required="true" class="w-full p-3 rounded-lg border border-slate-300 focus:ring-2 focus:ring-blue-500 outline-none transition" placeholder="name@company.com" required>
+                    </div>
+                    <div>
+                        <label for="message" class="block text-sm font-semibold text-slate-700 mb-1">How can we help?</label>
+                        <textarea id="message" name="message" aria-required="true" rows="5" class="w-full p-3 rounded-lg border border-slate-300 focus:ring-2 focus:ring-blue-500 outline-none transition" placeholder="Tell us about your inquiry..." required></textarea>
+                    </div>
+                    <button type="submit" class="w-full bg-blue-600 hover:bg-blue-500 text-white font-bold py-3 rounded-lg transition shadow-md">
+                        Send Message
+                    </button>
+                </form>
+            </section>
+
+            <section class="space-y-8">
+                <div>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-4">Direct Contact</h2>
+                    <p class="text-slate-600 mb-4 leading-relaxed">
+                        For partnership inquiries, technical issues regarding our <strong>startup calculations</strong>, or data corrections, please reach out to our team directly:
+                    </p>
+                    <a href="mailto:thedirectorlabs@gmail.com" class="text-blue-600 font-bold text-lg hover:underline break-all">
+                        thedirectorlabs@gmail.com
+                    </a>
+                </div>
+
+                <div class="pt-8 border-t border-slate-200">
+                    <h3 class="text-lg font-bold text-slate-900 mb-2">Response Time</h3>
+                    <p class="text-slate-600 text-sm leading-relaxed">
+                        Our team typically reviews all <strong>startup calculator support</strong> inquiries within 48 business hours. We prioritize feedback regarding the accuracy of our financial models.
+                    </p>
+                </div>
+
+                <div class="p-6 bg-slate-100 rounded-xl border border-slate-200">
+                    <h3 class="text-sm font-bold text-slate-900 uppercase tracking-widest mb-2">Note to Founders</h3>
+                    <p class="text-xs text-slate-500 leading-relaxed italic">
+                        While we strive for 100% accuracy across our SaaS tools, these resources are for educational purposes. For official legal or tax advice, please consult a certified professional.
+                    </p>
+                </div>
+            </section>
+        </div>
+
+        <div class="mt-20 text-center border-t border-slate-200 pt-12">
+            <h3 class="text-xl font-bold text-slate-900 mb-4">Done with your inquiry?</h3>
+            <a href="index.html" class="inline-flex items-center text-blue-600 font-semibold hover:underline">
+                <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
+                Explore all Free Startup & SaaS Calculators
+            </a>
+        </div>
+    </main>
+
+    <footer class="bg-white border-t py-16 text-slate-500">
+        <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12 text-left">
+            <div>
+                <p class="font-bold mb-4 text-slate-900 text-lg">FounderCalculators.com</p>
+                <p class="text-sm leading-relaxed">Helping founders build sustainable, profitable businesses through better math.</p>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Resources</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="about.html" class="standard-link">About Us</a></li>
+                    <li><a href="contact.html" class="text-blue-600 font-bold">Contact Support</a></li>
+                    <li><a href="index.html#finance" class="standard-link">Financial Tools</a></li>
+                </ul>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Legal</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="privacy.html" class="standard-link">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="standard-link">Terms of Service</a></li>
+                    <li><a href="disclaimer.html" class="standard-link">Earnings Disclaimer</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-12 pt-8 border-t border-slate-100 text-center px-6">
+            <p class="text-xs uppercase tracking-widest opacity-50">&copy; 2026 FounderCalculators. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+</body>
+</html>
