--- a/privacy.html
+++ b/privacy.html
@@ -1,15 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"><title>Privacy Policy | Founder Calculators</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy | FounderCalculators – Professional Data Handling</title>
+    <meta name="description" content="Privacy Policy for FounderCalculators. Learn how we handle your data, our use of Google AdSense cookies, and our commitment to startup data privacy.">
+    <meta name="keywords" content="startup privacy, SaaS calculator privacy, data protection, startup financial tools privacy">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .standard-link { transition: color 0.2s; }
+        .standard-link:hover { color: #2563eb; text-decoration: underline; }
+    </style>
 </head>
-<body class="bg-white text-slate-700 p-10 font-sans leading-relaxed">
-    <div class="max-w-3xl mx-auto border-t-8 border-indigo-600 pt-10">
-        <h1 class="text-3xl font-black text-slate-900 mb-6">Privacy Policy</h1>
-        <p class="mb-4">Founder Calculators provides financial modeling tools for entrepreneurs. We do not store your business data or financial inputs.</p>
-        <h2 class="text-xl text-slate-900 mt-8 mb-2">Financial Disclaimer</h2>
-        <p class="mb-4">Calculations are estimates only. This site does not provide official tax, legal, or accounting advice. Consult with a certified professional for business decisions.</p>
-    </div>
+<body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
+
+    <nav class="bg-white border-b py-4 px-6 sticky top-0 z-50">
+        <div class="max-w-6xl mx-auto flex justify-between items-center">
+            <a href="index.html" class="font-bold text-xl tracking-tight text-slate-900">
+                Founder<span class="text-blue-600">Calculators</span>
+            </a>
+            <div class="hidden md:flex items-center space-x-6 text-sm font-medium text-slate-600">
+                <a href="index.html#finance" class="standard-link">Finance</a>
+                <a href="index.html#growth" class="standard-link">Growth</a>
+                <a href="index.html#ops" class="standard-link">Operations</a>
+                <div class="h-4 w-px bg-slate-200 mx-2"></div>
+                <a href="about.html" class="standard-link">About</a>
+                <a href="contact.html" class="standard-link">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="max-w-4xl mx-auto px-6 py-16" aria-label="Privacy Policy Content">
+        <article class="bg-white p-8 md:p-12 rounded-2xl shadow-sm border border-slate-200">
+            <h1 class="text-4xl font-extrabold text-slate-900 mb-6 tracking-tight">Privacy Policy</h1>
+            <p class="text-sm text-slate-500 mb-10 uppercase tracking-wide">Last Updated: January 22, 2026</p>
+
+            <div class="space-y-8 text-slate-700">
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">1. Overview</h2>
+                    <p>At FounderCalculators, accessible from FounderCalculators.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by FounderCalculators and how we use it.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">2. Log Files</h2>
+                    <p>FounderCalculators follows a standard procedure of using log files. These files log visitors when they visit websites. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">3. Google DoubleClick DART Cookie</h2>
+                    <p>Google is a third-party vendor on our site. It uses cookies, known as DART cookies, to serve ads to our site visitors based upon their visit to our site and other sites on the internet. However, visitors may choose to decline the use of DART cookies by visiting the Google ad and content network Privacy Policy at the following URL – <a href="https://policies.google.com/technologies/ads" class="text-blue-600 underline hover:text-blue-800">https://policies.google.com/technologies/ads</a></p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">4. Advertising Partners Privacy Policies</h2>
+                    <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on FounderCalculators, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
+                    <p class="mt-4">Note that FounderCalculators has no access to or control over these cookies that are used by third-party advertisers.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">5. Data Accuracy & Browser-Based Calculations</h2>
+                    <p>Our <strong>SaaS financial tools</strong> and <strong>startup calculators</strong> (e.g., Burn Rate, Equity Dilution, SaaS Valuation) process all numerical data locally in your browser. We do not store, save, or transmit the financial figures you input into these tools. Your sensitive business data remains private to your local session and is cleared upon closing your browser.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">6. Consent</h2>
+                    <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">7. Contact Us</h2>
+                    <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to reach out to our team at: <a href="mailto:thedirectorlabs@gmail.com" class="text-blue-600 font-semibold underline hover:text-blue-800">thedirectorlabs@gmail.com</a>.</p>
+                </section>
+            </div>
+
+            <div class="mt-12 pt-8 border-t border-slate-100 text-center">
+                <p class="text-slate-600 mb-4">Explore our tools with complete confidence in your data privacy.</p>
+                <a href="index.html" class="inline-block bg-slate-900 text-white px-6 py-3 rounded-lg font-bold hover:bg-slate-800 transition">
+                    Back to All Calculators
+                </a>
+            </div>
+        </article>
+    </main>
+
+    <footer class="bg-white border-t py-16 text-slate-500">
+        <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12">
+            <div>
+                <p class="font-bold mb-4 text-slate-900 text-lg">FounderCalculators.com</p>
+                <p class="text-sm leading-relaxed">Helping founders build sustainable, profitable businesses through data-driven decisions and professional math.</p>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Resources</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="about.html" class="standard-link">About Us</a></li>
+                    <li><a href="contact.html" class="standard-link">Contact Support</a></li>
+                    <li><a href="index.html#finance" class="standard-link">Financial Tools</a></li>
+                </ul>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Legal</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="privacy.html" class="text-blue-600 font-bold">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="standard-link">Terms of Service</a></li>
+                    <li><a href="disclaimer.html" class="standard-link">Earnings Disclaimer</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-12 pt-8 border-t border-slate-100 text-center px-6">
+            <p class="text-xs uppercase tracking-widest opacity-50">&copy; 2026 FounderCalculators. All Rights Reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
