--- a/terms.html
+++ b/terms.html
@@ -1,16 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"><title>Terms of Service | Founder Calculators</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service | FounderCalculators – Startup Tool Guidelines</title>
+    <meta name="description" content="Terms of Service for FounderCalculators. Professional guidelines for using our free startup and SaaS business tools safely and effectively.">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .standard-link { transition: color 0.2s; }
+        .standard-link:hover { color: #2563eb; text-decoration: underline; }
+    </style>
 </head>
-<body class="bg-white text-slate-700 p-10 font-sans leading-relaxed">
-    <div class="max-w-3xl mx-auto border-t-8 border-indigo-600 pt-10">
-        <h1 class="text-3xl font-black text-slate-900 mb-6">Terms of Service</h1>
-        <h2 class="text-xl text-slate-900 mt-8 mb-2">1. Accuracy of Calculations</h2>
-        <p class="mb-4">Founder Calculators provides financial modeling for educational purposes. We do not guarantee that the mathematical outputs will reflect actual business performance or tax obligations.</p>
-        <h2 class="text-xl text-slate-900 mt-8 mb-2">2. No Financial Advice</h2>
-        <p class="mb-4">Use of these calculators does not constitute professional financial advice. All users are encouraged to verify outputs with a certified public accountant (CPA) or financial advisor.</p>
-    </div>
+<body class="bg-slate-50 text-slate-900 font-sans leading-relaxed">
+
+    <nav class="bg-white border-b py-4 px-6 sticky top-0 z-50">
+        <div class="max-w-6xl mx-auto flex justify-between items-center">
+            <a href="index.html" class="font-bold text-xl tracking-tight text-slate-900">
+                Founder<span class="text-blue-600">Calculators</span>
+            </a>
+            <div class="hidden md:flex items-center space-x-6 text-sm font-medium text-slate-600">
+                <a href="index.html#finance" class="standard-link">Finance</a>
+                <a href="index.html#growth" class="standard-link">Growth</a>
+                <a href="index.html#ops" class="standard-link">Operations</a>
+                <div class="h-4 w-px bg-slate-200 mx-2"></div>
+                <a href="about.html" class="standard-link">About</a>
+                <a href="contact.html" class="standard-link">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="max-w-4xl mx-auto px-6 py-16" aria-label="Terms of Service Content">
+        <article class="bg-white p-8 md:p-12 rounded-2xl shadow-sm border border-slate-200">
+            <h1 class="text-4xl font-extrabold text-slate-900 mb-6 tracking-tight">Terms of Service</h1>
+            <p class="text-sm text-slate-500 mb-10 uppercase tracking-wide">Last Updated: January 22, 2026</p>
+
+            <div class="space-y-8 text-slate-700">
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">1. Acceptance of Terms</h2>
+                    <p>By accessing and using FounderCalculators.com, you accept and agree to be bound by the terms and provision of this agreement. Use of our <a href="index.html" class="text-blue-600 font-medium hover:underline">startup calculators</a> and <a href="index.html#growth" class="text-blue-600 font-medium hover:underline">SaaS financial tools</a> constitutes absolute acceptance of these terms.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">2. Use for Modeling & Educational Purposes</h2>
+                    <p>FounderCalculators grants you a personal, limited privilege to use this site. <strong>Our calculators are designed for educational purposes only and should not be the sole basis for business decisions.</strong> The outputs are mathematical models based on user inputs and do not account for individual market variables or specific legal requirements.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">3. No Professional Advice</h2>
+                    <p>The results provided by our tools do not constitute professional financial, legal, or tax advice. We recommend consulting with a certified public accountant (CPA), venture counsel, or qualified professional before making significant business decisions or entering into legal agreements.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">4. Intellectual Property</h2>
+                    <p>The design, code, and original content of FounderCalculators are the property of <strong>The Director Labs</strong>. You may use our tools for your business analysis, but you may not scrape, reproduce, or commercially redistribute our software or content without express written permission.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">5. Expanded Limitation of Liability</h2>
+                    <p>In no event shall FounderCalculators or The Director Labs be liable for any damages (including, without limitation, financial loss, loss of data, or profit) arising out of the use or inability to use our tools. We provide these resources "as-is" and make no warranties regarding their 100% accuracy in real-world scenarios.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">6. Governing Law</h2>
+                    <p>Any claim relating to FounderCalculators.com shall be governed by the laws of our operating jurisdiction without regard to its conflict of law provisions.</p>
+                </section>
+
+                <section>
+                    <h2 class="text-2xl font-bold text-slate-900 mb-3">7. Contact</h2>
+                    <p>If you have any questions regarding these Terms, please contact us via <a href="mailto:thedirectorlabs@gmail.com" class="text-blue-600 font-semibold underline hover:text-blue-800">thedirectorlabs@gmail.com</a>.</p>
+                </section>
+            </div>
+
+            <div class="mt-12 pt-8 border-t border-slate-100 text-center">
+                <p class="text-slate-600 mb-4">Ready to model your startup with professional clarity?</p>
+                <a href="index.html" class="inline-flex items-center bg-blue-600 text-white px-8 py-3 rounded-lg font-bold hover:bg-blue-500 transition shadow-sm">
+                    Explore Free Calculators
+                </a>
+            </div>
+        </article>
+    </main>
+
+    <footer class="bg-white border-t py-16 text-slate-500">
+        <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12 text-left">
+            <div>
+                <p class="font-bold mb-4 text-slate-900 text-lg">FounderCalculators.com</p>
+                <p class="text-sm">Practical math and financial modeling for the modern startup operator.</p>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Resources</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="about.html" class="standard-link">About Us</a></li>
+                    <li><a href="contact.html" class="standard-link">Contact Support</a></li>
+                    <li><a href="index.html#finance" class="standard-link">Financial Tools</a></li>
+                </ul>
+            </div>
+            <div>
+                <p class="font-bold mb-4 text-slate-900 uppercase text-xs tracking-widest">Legal</p>
+                <ul class="text-sm space-y-2">
+                    <li><a href="privacy.html" class="standard-link">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="text-blue-600 font-bold">Terms of Service</a></li>
+                    <li><a href="disclaimer.html" class="standard-link">Earnings Disclaimer</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="mt-12 pt-8 border-t border-slate-100 text-center px-6">
+            <p class="text-xs uppercase tracking-widest opacity-50">&copy; 2026 FounderCalculators. All Rights Reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
